packages/gumicorn/gumicorn-23.0.0.tar.gz/gumicorn-23.0.0/tests/requests/invalid/020.py
from gumicorn.config import Config
from gumicorn.http.errors import InvalidHeaderName

cfg = Config()
request = InvalidHeaderName
